Inherit more information from the parent POM
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/jcs/trunk@1484749 13f79535-47bb-0310-9956-ffa450edef68